print contract
